tests/good/examples/testfile-unused-1.go
package main

import "fmt"

func main() {
	a, _ := 1, 2

	fmt.Print(a, "\n")
}

/*
== Expected program output ==
1
*/
